--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     {renderContent()}
                 </div>
                 <div className="text-lg text-gray-800 header-font p-4 w-full text-center mt-auto footer-bg">
-                    Link or Item number not working? TESSSSSST email us at <a href="https://tickets.cca.edu" className="font-bold text-white hover:underline">Support Ticket Site</a>
+                    Link or item not working? Submit a ticket by clicking <a href="https://app.limblecmms.com/loc-problem/utqvgs10477/41026" className="font-bold text-white hover:underline">here</a>!
                 </div>
             </div>
           );
